# adiosvm

./: .gitmodules
Tutorial/gray-scott/: CMakeLists.txt  adios2.xml
Tutorial/gray-scott/analysis/: curvature.cpp  find_blobs.cpp  isosurface.cpp
Tutorial/gray-scott/common/: collector.grpc.pb.cc  collector.grpc.pb.h  collector.pb.cc  collector.pb.h  telemetry.hpp  yuzu_client.hpp
Tutorial/gray-scott/controller/: main.cpp
Tutorial/gray-scott/simulation/: main.cpp  settings.cpp
Tutorial/heat2d/cpp/: adios2.xml
Tutorial/heat2d/cpp/analysis/: heatAnalysis.cpp
